--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="push.example.a99101.goodweather">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="GoodWeather"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyA7xbH64MOsIy2KLFDZxEgdr3MQ4vYEfeU"/>
@@ -26,29 +18,48 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+            </activity>
         <activity
-            android:name=".goodweather.ThirdActivity"
-            android:label="@string/app_name"
-            android:parentActivityName=".goodweather.FirstActivity"
-            android:theme="@style/AppTheme" >
+            android:name=".FirstActivity"
+            android:label="FirstActivity"
+            android:parentActivityName=".FirstActivity"
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="push.example.a99101.goodweather.MainActivity" />
+                android:value="push.example.a99101.goodweather.FirstActivity"> </meta-data>
         </activity>
         <activity
-            android:name=".goodweather.SecondActivity"
-            android:label="@string/title_activity_hourly_forecast"
-            android:parentActivityName=".goodweather.FirstActivity"
-            android:theme="@style/AppTheme" >
+            android:name=".SecondActivity"
+            android:label="SecondActivity"
+            android:parentActivityName=".FirstActivity"
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="push.example.a99101.goodweather.MainActivity" />
+                android:value="push.example.a99101.goodweather.FirstActivity"> </meta-data>
         </activity>
-    </application>
+        <activity
+            android:name=".ThirdActivity"
+            android:label="ThirdActivity"
+            android:parentActivityName=".FirstActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="push.example.a99101.goodweather.FirstActivity"> </meta-data>
+        </activity>
+        <activity
+            android:name=".FourthActivity"
+            android:label="FourthActivity"
+            android:parentActivityName=".FirstActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="push.example.a99101.goodweather.FirstActivity"> </meta-data>
+        </activity>
 
+
+
+    </application>
 
 </manifest>
